syntax = "proto3";

option csharp_namespace = "HR.Grpc.Protos";

package employee;

// The employee service definition
service EmployeeService {
  // Get employee by ID
  rpc GetEmployee (GetEmployeeRequest) returns (EmployeeResponse);
  
  // Get all employees
  rpc GetAllEmployees (GetAllEmployeesRequest) returns (EmployeeListResponse);
  
  // Create a new employee
  rpc CreateEmployee (CreateEmployeeRequest) returns (EmployeeResponse);
  
  // Update an existing employee
  rpc UpdateEmployee (UpdateEmployeeRequest) returns (EmployeeResponse);
  
  // Delete an employee
  rpc DeleteEmployee (DeleteEmployeeRequest) returns (DeleteEmployeeResponse);
}

// Request message for getting a specific employee
message GetEmployeeRequest {
  string employee_id = 1;
}

// Request message for getting all employees
message GetAllEmployeesRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

// Request message for creating a new employee
message CreateEmployeeRequest {
  EmployeeModel employee = 1;
}

// Request message for updating an employee
message UpdateEmployeeRequest {
  string employee_id = 1;
  EmployeeModel employee = 2;
}

// Request message for deleting an employee
message DeleteEmployeeRequest {
  string employee_id = 1;
}

// Response message containing employee data
message EmployeeResponse {
  EmployeeModel employee = 1;
}

// Response message containing a list of employees
message EmployeeListResponse {
  repeated EmployeeModel employees = 1;
  int32 total_count = 2;
  int32 page_number = 3;
  int32 page_size = 4;
}

// Response message for delete operation
message DeleteEmployeeResponse {
  bool success = 1;
  string message = 2;
}

// Employee data model
message EmployeeModel {
  string id = 1;
  string employee_id = 2;
  string first_name = 3;
  string last_name = 4;
  string middle_name = 5;
  string date_of_birth = 6;
  string email = 7;
  string phone = 8;
  string address = 9;
  string joining_date = 10;
  string termination_date = 11;
  EmploymentStatusEnum status = 12;
  string department_id = 13;
  string position_id = 14;
  string manager_id = 15;
}

// Employment status enum
enum EmploymentStatusEnum {
  ACTIVE = 0;
  ON_LEAVE = 1;
  SUSPENDED = 2;
  TERMINATED = 3;
  RETIRED = 4;
}
